# ps-camp

./: .flake8  .gitignore  Makefile  README.md  alembic.ini  client_secret_1020131056840-30cishu970m00bg44st3t4n0cpvek4sl.apps.googleusercontent.com.json  generate_token.py  migrate_sqlite_to_postgres.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: keep-alive.yml
alembic/: env.py
alembic/versions/: 0284a911ee15_change_likes_to_json_list.py  0349f30efffc_add_user_id_to_candidates.py  103797986e9d_add_bank_accounts_and_transactions.py  2d77690128ce_initial_schema.py  415f6f93861f_initial_schema.py  415f6f93861f_recreate_missing_initial_schema.py  4d127314cf12_add_photo_url_to_candidate.py  65048261d097_add_likes_column_to_posts.py  656a8b043beb_add_file_url_to_proposals.py  725e3e549d22_add_replies_column_to_posts.py  8566d65b2c30_create_party_documents_table.py  a043d1e085ae_fix_referendum_votes_type_to_uuid.py  c13beebc176b_initial_schema.py  c498a0771d6b_add_candidate_and_proposal_tables.py  d5be4de87a74_add_candidate_and_proposal_tables.py  fbc5e0733f00_add_referendum_table.py
scripts/: batch_register.py  batch_voter.py  seed_referendums.py
src/ps_camp/: app.py  init_db.py
src/ps_camp/db/: __init__.py  base.py  session.py
src/ps_camp/models/: npc.py  party.py  post.py
src/ps_camp/repos/: bank_sql_repo.py  candidate_sql_repo.py  npc_data.py  npc_repo.py  npc_sql_repo.py  party_data.py  party_repo.py  post_data.py  post_repo.py  post_sql_repo.py  proposal_sql_repo.py  referendum_sql_repo.py  referendum_vote_sql_repo.py  user_sql_repo.py  vote_sql_repo.py
src/ps_camp/sql_models/: __init__.py  bank_model.py  candidate_model.py  npc_model.py  party_document_model.py  post_model.py  proposal_model.py  referendum_model.py  referendum_vote_model.py  user_model.py  vote_model.py
src/ps_camp/templates/: 404.html  500.html  bank.html  base.html  distribute.html  error_csrf.html  index.html  login.html  map.html  new_post.html  npc_detail.html  npc_gallery.html  npcs.html  posts.html  profile.html  register.html  results.html  submit.html  view_post.html  vote.html  vote_party.html  vote_referendum.html  vote_results.html  vote_success.html
src/ps_camp/utils/: convert_md.py  get_latest_weather.py  get_register_close_time.py  google_drive.py  humanize_time_diff.py  password_hasher.py  password_rules.py  pdf_templates.py  resolve_owner_name.py  (+3 more)
tests/: test_fee.py
(+34 files in other folders)
