[project]
name = "ps-camp"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony",email = "sungpinyue@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
alembic = "^1.16.2"
black = "^25.1.0"
flake8 = "^7.3.0"

