[project]
name = "ps-camp"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony",email = "sungpinyue@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "weasyprint (>=65.1,<66.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
alembic = "^1.16.2"
black = "^25.1.0"
flake8 = "^7.3.0"
autoflake = "^2.3.1"

